# models.py
@@ -83,6 +83,16 @@ class Trail_Log(db.Model):
     added_by = db.Column(db.String(7), nullable=False)
     added_on = db.Column(db.DateTime, nullable=False, default=datetime.utcnow)
 
+class Trail_Point(db.Model):
+    __tablename__ = 'Trail_Point'
+    __table_args__ = {'schema': 'CW2'}
+
+    trail_point_id = db.Column(db.String(8), primary_key=True)
+    trail_id = db.Column(db.String(7), db.ForeignKey('CW2.Trail.trail_id'), nullable=False)
+    latitude = db.Column(db.Numeric(9, 6), nullable=False)
+    longitude = db.Column(db.Numeric(9, 6), nullable=False)
+    sequence_no = db.Column(db.Integer, nullable=False)
+
 # ---------- SCHEMAS ----------
 
 class UsersSchema(Schema):
@@ -94,6 +104,16 @@ class UsersSchema(Schema):
 class FeatureSchema(Schema):
     feature_id = fields.Str(required=True)
     feature_name = fields.Str(required=True)
+
+class TrailPointSchema(Schema):
+    trail_point_id = fields.Str(dump_only=True)
+    trail_id = fields.Str(required=True)
+    latitude = fields.Decimal(as_string=True, required=True, 
+                             validate=validate.Range(min=-90, max=90))
+    longitude = fields.Decimal(as_string=True, required=True, 
+                              validate=validate.Range(min=-180, max=180))
+    sequence_no = fields.Int(required=True, validate=validate.Range(min=1))
+
 
 class TrailSchema(Schema):
     trail_id = fields.Str(dump_only=True)  # Generated by API, not provided by user
@@ -110,8 +130,13 @@ class TrailSchema(Schema):
     difficulty_id = fields.Str(required=True)
     created_by = fields.Str(required=True)
 
+    points = fields.List(fields.Nested(TrailPointSchema), dump_only=True)
+
+
 trail_schema = TrailSchema()
 trails_schema = TrailSchema(many=True)
 feature_schema = FeatureSchema()
 features_schema = FeatureSchema(many=True)
 users_schema = UsersSchema(many=True)
+trail_point_schema = TrailPointSchema()
+trail_points_schema = TrailPointSchema(many=True)
